--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
   font-style: normal;
   font-weight: 400;
   font-size: 1rem;
-  line-height: 250%;
+  line-height: 275%;
   text-align: center;
 }
 
@@ -48,6 +48,7 @@ body {
 .keyboard {
   border-radius: 10px;
   padding: 20px;
+  align-items: center;
   width: min(800px, 100%);
   height: max-content;
   margin: 0 auto;
@@ -61,12 +62,14 @@ body {
 
 .key {
   position: relative;
-  display: inline-block;
-  font-size: 90%;
+  overflow: hidden;
+  padding: 0;
+
+  white-space: nowrap;
   font-weight: 700;
-  color: rgb(209,209,217);
   text-shadow: 0 -1px 2px rgba(0,0,0,.2);
-  padding: .5em 1em;
+
+  color: rgb(209,209,217);
   border-radius: 3px;
   background: linear-gradient(rgb(110,112,120), rgb(81,81,86)) rgb(110,112,120);
   box-shadow:
